# cadical

./: CMakeLists.txt
src/: multisolutions.cpp  multisolutions.hpp
test/aaf/: adm.cpp  cf.cpp  cmp.cpp  ex.cpp  makefile  prf.cpp  stb.cpp
